force-app/main/default/objects/Experian_Decision__c/Experian_Decision__c.object-meta.xml
<CustomObject>
    <label>Experian Decision</label>
    <nameField>
        <label>Experian Decision Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experian Decisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>