force-app/main/default/objects/Experian_Decision__c/fields/Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit__c</fullName>
    <label>Credit Limit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>