force-app/main/default/objects/Experian_Decision__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <length>150</length>
    <type>Text</type>
</CustomField>