force-app/main/default/objects/Experian_Decision__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <length>50</length>
    <type>Text</type>
</CustomField>