force-app/main/default/objects/Experian_Decision__c/fields/Triggered_Rule__c.field-meta.xml
<CustomField>
    <fullName>Triggered_Rule__c</fullName>
    <description
  >example: If Scorecard is S4 and IntelliscorePlusScore is 1.0 to 43.0 and Yearsinfile is 1 to 9 then Approve.</description>
    <label>Triggered Rule</label>
    <type>TextArea</type>
</CustomField>